<resources>
    <string name="app_name">Gasturah</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="tv_login">Login</string>
    <string name="tv_email">Email</string>
    <string name="tv_login_desc">Welcome to Gasturah</string>
    <string name="tv_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="tv_register">Register</string>
    <string name="tv_register_desc">Please fill in your personal data below</string>
    <string name="btn_register">Register</string>
    <string name="tv_username">Username</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="lawangsewu_description">Lawang Sewu adalah gedung bersejarah milik PT Kereta Api Indonesia (Persero) yang awalnya digunakan sebagai Kantor Pusat perusahaan kereta api swasta Nederlandsch-Indische Spoorweg Maatschappij (NISM). Gedung Lawang Sewu dibangun secara bertahap di atas lahan seluas 18.232 m2. Bangunan utama dimulai pada 27 Februari 1904 dan selesai pada Juli 1907. Sedangkan bangunan tambahan dibangun sekitar tahun 1916 dan selesai tahun 1918.\n \n Bangunannya dirancang oleh Prof. Jakob F. Klinkhamer dan B.J. Ouendag, arsitek dari Amsterdam dengan ciri dominan berupa elemen lengkung dan sederhana. Bangunan di desain menyerupai huruf L serta memiliki jumlah jendela dan pintu yang banyak sebagai sistem sirkulasi udara. Karena jumlah pintunya yang banyak maka masyarakat menamainya dengan Lawang Sewu yang berarti seribu pintu.</string>
    <string name="lawangsewu_sumber">sumber : https://heritage.kai.id/page/lawang-sewu</string>
    <string name="title_maps">Maps</string>
    <string name="search_sites">Search Sites</string>
    <string name="current_location">Current Location</string>
    <string name="where_are_you_going_today">Where Are You Going Today?</string>
    <string name="search">Search</string>
    <string name="get_location">Get Location</string>
    <string name="collapse_and_expand">Collapse and Expand</string>
    <string name="take_picture">Take Picture</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="failed_capture">Failed Capture</string>
    <string name="not_getting_permission">Not Getting Permission</string>
    <string name="preview_picture">Preview Picture</string>
    <string name="loading">Loading...</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t Have an Account? Sign Up Here</string>
    <string name="already_have_an_account_sign_in">Already Have an Account? Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="tv_title">Title</string>
    <string name="descriptions">Descriptions</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_activity_setting">SettingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tv_name">Name</string>
    <string name="tv_setting_username">Username</string>
    <string name="tv_location">Location</string>
    <string name="tv_setting_password">Password (Optional)</string>
    <string name="save">Save</string>
    <string name="language">Language</string>
    <string name="choose_a_picture">Choose a Picture</string>
    <string name="tv_btn_logout">Logout</string>
    <string name="tv_setting">Setting</string>
</resources>